# hyppopipe

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-docs.yml
docs/en/: image.md  index.md  pipeline.md
docs/en/Dataset/: ImageFolder.md  PairedImageMaskFolder.md  YAMLDataset.md  dataset.md  index.md
docs/en/Training/: index.md  trainer.md
docs/ru/: image.md  index.md  pipeline.md
docs/ru/Dataset/: ImageFolder.md  PairedImageMaskFolder.md  YAMLDataset.md  dataset.md  index.md
docs/ru/Training/: index.md  trainer.md
examples/: brain_demonstration.ipynb  demonstration.ipynb  transforms.ipynb
src/hyppopipe/: __init__.py  package_logging.py  types.py  utils.py
src/hyppopipe/common/: protocols.py  types.py  utils.py
src/hyppopipe/data/: __init__.py  base.py  dataset.py  image.py
src/hyppopipe/inference/: __init__.py  model_builder.py  run.py  types.py
src/hyppopipe/pipeline/: __init__.py  action.py  context.py  core.py  errors.py  pipeline.py  step.py  torch_steps.py
src/hyppopipe/train/: __init__.py  bundle.py  config.py  early_stopping.py  model_spec.py  objectives.py  reporting.py  result.py  train.py  trainer.py  transforms.py
tests/: test_classification_models.py  test_image.py  test_image_transformer.py  test_image_transformer_geometry.py  test_objectives.py  test_package_logging.py  test_pipeline_predict.py  test_roi_classification.py  test_segmentation_support.py  test_training_reports.py  test_yaml_detection_dataset.py
(+42 files in other folders)
